# forcelayout_rust

./: Cargo.toml  README.md  build_shaders.sh
shaders/: background.frag.spv  background.vert.spv  compute.comp.spv  compute_position.comp.glsl  compute_position.comp.spv  compute_pull.comp.glsl  compute_pull.comp.spv  compute_repulsion.comp.glsl  compute_repulsion.comp.spv  geometry.frag.spv  geometry.vert.glsl  geometry.vert.spv
src/: bubble.rs  createDataset.rs  create_dataset.rs  drawable.rs  edge.rs  forcelayout.rs  forcelayout_graph.rs  gpu_forcelayout.rs  gpu_vertex.rs.1  graph.rs  id_generator.rs  main.1.rs  main.rs  math.rs  mesh.rs  physics.rs  project.rs  shape_builder.rs
src/datasets/: miserables.json
