[package]
name = "forcelayout"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde_json = "1.0"

lyon = "0.17.5"
env_logger = "0.7"
log = "0.4"

wgpu = {version = "0.16.0", features=["spirv"]}
winit = "0.27.1"
futures = "0.3.13"
bytemuck = "1.5.1"
